--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
 <resources>
   <string name="app_name">FHIR Engine Sample App</string>
 
-  <string name="title_patient_list">Registered Patients</string>
+  <string name="title_patient_list">Registered Patients </string>
   <string name="title_patient_detail">SamplePatient Detail</string>
 
   <string name="menu_about">About Fhir Engine</string>
@@ -66,4 +66,5 @@
   <string name="close">Close</string>
   <string name="sync_menu">Sync</string>
   <string name="last_sync">Last sync</string>
+  <string name="add_items">Add items</string>
 </resources>
